--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -5,7 +5,7 @@ provider:
   runtime: nodejs8.10
   stackName: ${self:service}-${self:provider.stage}
   stage: ${opt:stage, 'dev'}
-  region: ${opt:region, 'ap-southeast-2'}
+  region: ${opt:region, 'ap-northeast-2'}
   iamRoleStatements:
     - Effect: Allow
       Action:
