--- a/backend/package.json
+++ b/backend/package.json
@@ -10,9 +10,7 @@
     "node-fetch": "^2.3.0",
     "node-jose": "^1.1.0"
   },
-  "devDependencies": {
-    "eslint": "^5.15.1"
-  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
